--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": "https://github.com/wsun/multibuzzer",
   "engines": {
-    "node": "16.13.0"
+    "node": "20.x"
   },
   "scripts": {
     "start": "node -r esm src/server.js",
