--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "author": "iamwillsun@gmail.com",
   "license": "MIT",
-  "repository": "https://github.com/wsun/multibuzzer",
+  "repository": "https://github.com/vikaas-ks/buzzer",
   "engines": {
     "node": "20.x"
   },
@@ -11,7 +11,7 @@
     "start": "node -r esm src/server.js",
     "dev": "concurrently \"PORT=4000 yarn client\" \"PORT=4001 yarn start\"",
     "client": "react-scripts start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
